fix for date labeling map position on smaller screens

--- a/src/_sass/tools/spotlight-on-date-labeling-regulations/carousel.scss
+++ b/src/_sass/tools/spotlight-on-date-labeling-regulations/carousel.scss
@@ -70,9 +70,11 @@
     padding-top: 20px;
   }
   #start-slides {
-    position: absolute;
-    top: 0;
-    left: 0;
+    .button {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
   }
 }
 
